k8-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  labels:
    app: python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000    
      containers:
      - name: webserver
        image: webserver-image:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.5"
          limits:
            memory: "256Mi"
            cpu: "1"
        securityContext:
          allowPrivilegeEscalation: false
