k8-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python
  name: webserver-service
spec:
  selector:
    app: python
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
