k8-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /tree
            pathType: Prefix
            backend:
              service:
                name: webserver-service
                port:
                  number: 8080
